fixed box-sizing of exercise cards and distracting scrollbars

--- a/src/stylesheets/patientviews.css
+++ b/src/stylesheets/patientviews.css
@@ -1,8 +1,11 @@
+::-webkit-scrollbar-track {
+	display: none;
+}
+
 .patient-show {
 	margin: 70px auto 0 auto;
 	min-height: 600px;
 	max-height: 1200px;
-	overflow: scroll;
 }
 
 .patient-show-content-container {
@@ -12,16 +15,15 @@
 .exercise-container {
 	display:grid;
 	grid-template-columns: 1fr 1fr 1fr;
-	grid-column-gap: 1em;
-	grid-row-gap: 3em;
 	width: 1000px;
+	height: 600px;
 	margin: 0 auto;
 }
 
 .patient-exercise-card {
 	/* width: 700px; */
 	width: 300px;
-	height: 550px;
+	height: 600px;
 	margin: 0 auto;
 	overflow-y:scroll;
 	border-radius: 25px;
@@ -58,13 +60,14 @@
 	content: "Flagged";
 }
 
-.show-comments-area {
+.show-comments-area-for-patient {
 	margin: 0 auto;
 	margin-bottom: 10px;
 	width: 90%;
 	min-height: 10px;
 	max-height: 100px;
-	overflow: scroll;
+	overflow-y: scroll;
+	overflow-x: hidden;
 }
 
 .patient-name {
@@ -79,6 +82,6 @@
 	margin-bottom: 20px;
 	border-radius: 20px;
 	padding: 5px;
-	overflow:scroll;
+	overflow-y:scroll;
 	font-size: 12px;
 }
